# hello-cpp

./: Makefile.am  README.md  configure.ac
.github/workflows/: github-actions-demo.yml
src/lib1/: lib1.cpp  lib1.hpp
src/lib2/: lib2.cpp  lib2.hpp
src/prog1/: main.cpp
src/prog2/: main.cpp
