# Initialize
AC_INIT([MyProject], [0.0.1], [])
AC_PREREQ([2.69])

# Safety check
AC_CONFIG_SRCDIR([src/prog1/main.cpp])

# Put configuration results here
AC_CONFIG_HEADERS([config.h])

# Auxiliary files subdirs
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIRS([m4])

# Enable Automake
AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects foreign])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CXX
AM_PROG_AR

# Enable Libtool
LT_INIT
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
